update docker file first